# game-skynet-minecraft

./: .coverage  .gemini.mcp.conf  .gitignore  CHANGELOG.md  GEMINI.md  Makefile  Makefile.am  README.md  bootstrap.sh  build-go.sh  build_history.json  configure.ac  deploy_random_5.py  emerald_delta.json  gemini-cli  go.sum  launcher_accounts.json  launcher_entitlements.json  launcher_product_state.json  launcher_profiles.json  launcher_quick_play.json  launcher_settings.json  launcher_ui_state.json  main.go  models.py  package-lock.json  reactive_mutation2.1.py  realms_persistence.json  requirements.txt  schematic-agent  schematics  screenshots  server.properties  servers.dat_old  test_rcon.py  tox.ini  treatment_tags.json  tree.txt  updateSourceCache.json  usercache.json
.gemini/: .geminiignore  GEMINI.md  settings.json
.github/workflows/: bandit.yaml  bandit.yml  coverage.yml  python-test.yml
chunk-repair/: readme.txt
chunks/: clean_legacy_chunks.sh
cmd/: main.go  npu_accel.go
config/: CONTEXT.md  GEMINI.md  opencode.json
config/schem-gen/: conduit_synth.yaml  grid_tie_weaver.yaml
contiainer/chonk/: Dockerfile
contiainer/edge-t/: Dockerfile
contiainer/node900/: Dockerfile
contiainer/node901/: Dockerfile
contiainer/node902/: Dockerfile
contiainer/node903/: Dockerfile
contiainer/skynet/: Dockerfile
contiainer/stargate/: Dockerfile
database/: README.md  setup_bluemap.txt
docs/: HISTORY.md  OLLAMA.md  README.md  ai-mapping-live.txt  alphabet.txt  blueprint.txt  database.md  edge-t-notes.txt  goog.txt  history-mega.txt  history.md  planning.md  rail-prompt.txt  schematics.md  skynet_process.txt  updates_gemini.txt  vertex.txt  voxel.txt
docs/admin/: minecraft_floating_text.txt
docs/drawings/: filesystem.drawio  minecraft-network.drawio  minecraft.drawio  net_diag2.py  network_diagram.py
docs/grimoire/: Makefile.am  chap_acceleration.tex  chap_pipeline.tex  chap_protocols.tex  chap_schematics.tex  chap_time.tex  chap_topology.tex  grimoire.tex
docs/historical_snippets/: chunk-glithc.txt  discordsrv.txt  login-message.md  notes.txt  npu_spatial_engine.py  planning.md  ranks.md  skynet_commentary.txt
docs/mapping/: push.sh  verify_ai_field_coords.py
docs/old/: SHROOMVILLE_MASTER_MANIFEST.txt  SHROOMVILLE_MASTER_MANIFEST_v2.txt  notes.txt  skynet_commentary.py  skynet_commentary.txt  terrain.md
docs/plugins/: login-message.md  ranks.md
docs/roadshow/: slides.tex
docs/slides/: Makefile.am  document.tex  network.drawio  preamble.tex  quest-for-greebling.tex
docs/slides/.gemini/: GEMINI.md
input/: build_history.json
internal/builders/: evil-weave.go  weaver.go
internal/minecraft/: minecraft.go
lib/: t2bm_logic.txt
logs/: new-design.txt  test_results.txt
mapping/: README.md  bluemap_api.py  mapping.html  mapping.md  notes.txt
mcp/: README.md  notes.txt  setup.txt
mcp-server/: GEMINI.md  README.md  mcp-servers.json  notes.txt  schematic_generator_orchestrator.py
mcp-servers/: notes.txt  skynet-agent.service  skynet-daemon.service
mcrcon/: __init__.py  mc_rcon.py  mcrcon.py
mcrcon/minecraft_client/: automodloader.py  requirements.txt
mcrcon/routes/: routes.py
mcrcon/static/: README.md
mcrcon/templates/: history.html  status.html
minecraft/: README.md
minecraft/journeymap/: colorpalette.json
models/: README.md  verify_models.py  yolov8s_h8l.hef
plugin/: readme.txt
plugin/net.bitsmasher.mod/: .project  build.gradle
rail/: notes.txt
rail-agent/: notes.txt
schematic-agent/: GEMINI.md  adaptive_mutation_v7.py  building-improvments.txt  deep_rail_trans.py  kinetic_rail_v5.py  npu_spatial_engine.py  output  reactive_mutation.py  skynet_core.py  skynet_daemon.py  skynet_orchestrator.py  skynet_process.py  skynet_self_aware.py  skynet_unified.py  validate_schems.py  vision_lite_overseer.py
schematic-agent/builders/: bank.py  castle.py
schematic-agent/prompts/: cyberdyne_rd_tower.json  signal_core_data_hub_v2.json  vertical_sump_v3.json
schematic-agent/schem_files/: SKYNET_BRIDGE_4458.schem  SKYNET_BRIDGE_4771.schem  SKYNET_BRIDGE_5088.schem  SKYNET_HOUSE_1532.schem  (+36 more)
schematics/: GEMINI.md  README.md  adaptive_mutation_v7.py  ai_architect.py  ai_high_density_infra.py  batch_generate.py  build_history.json  decoration.py  deep_rail_trans.py  gemini.md  generate_noodle_exchange.py  generate_rail_sentinel.py  generate_schematic.py  generate_signal_core.py  kinetic_rail_v5.py  neural_bridge_v7.py  neural_bridge_v8_pathfinder.py  neural_pathfinder.py  neural_rail_v7_nexus.py  npu_architect.py  npu_spatial_engine.py  palette_gen.py  place_ai_field_signs.py  place_ai_warning_signs.py  reactive_mutation.py  reactive_mutation2.py  schem_files  skynet_agent.py  skynet_controller.py  skynet_core.py  skynet_daemon.py  skynet_orchestrator.py  skynet_process.py  skynet_process2.py  skynet_self_aware.py  skynet_unified.py  validate_existing.py  validate_no_overlaps.py  validate_schems.py  verify_npu.py  (+1 more)
scripts/: distribute_guide.sh  palette_gen.py  place_ai_field_signs.py  place_ai_warning_signs.py  rcon.sh  skynet-ai.service
server_tools/: README.md  main.py  status.py
servers/: hardware.txt  mcp-notes.txt  setup.txt
src/: GEMINI.md  README.md  ai_architect.py  ai_architect.py.old  ai_to_rcon.py  bluemap_api.py  build_history.json  kinetic_rail_v5.py  logging.conf  neural_bridge_v7.py  neural_rail.py  neural_rail_v7_nexus.py  notes.txt  skynet_process.py  verify_npu.py  vision_lite_overseer.py  visualize_vault.py
test/: GEMINI.md  README.md  conftest.py  notes.txt  requirements-test.txt  requirements-text.txt  test_brain.py  test_builders.py  test_chunk_integrity.py  test_database_connectivity.py  test_gemini_link.py  test_greeble.py  test_hailo_npu_decoding_validity.py  test_hardware.py  test_mcp_stargate.py  test_monitor.py  test_neural_vault_logging_persistence.py  test_rail_logic.py  test_rcon.py  test_rcon_bridge.py  test_schematic_boundary_safety.py  test_schematic_metadata_integrity.py  test_schematic_tps_impact_threshold.py  test_telemetry_stargate.py  test_tpu.py  test_vault_multi_db_connectivity.py
(+3408 files in other folders)
